<resources>
    <string name="app_name">videosharex</string>

    <string name="title_video_feed">Video Feed</string>
    <string name="title_users">Users</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="recommend_button">Recommend</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Followed</string>
    <string name="share_button">Share</string>

    <string name="profile_button_profile">Profile</string>
    <string name="profile_button_friends">Friends</string>
    <string name="profile_button_history">History</string>
    <string name="profile_button_settings">Settings</string>
    <string name="profile_profileImage_description">User\'s avatar</string>
    <string name="profile_default_user_name">New User</string>

    <string name="title_activity_profile_profile">Profile</string>
    <string name="profile_profile_userIcon">User Icon</string>
    <string name="profile_profile_userName">User Name</string>
    <string name="profile_profile_bio">Bio</string>
    <string name="profile_profile_whatsUp">What\'s Up</string>

    <string name="title_activity_profile_setting">Setting</string>
    <string name="title_activity_profile_friend">Friends</string>
    <string name="search_hint">Enter User ID</string>

    <string name="settings_theme_color">Theme Color</string>

    <string name="user_status_offline">offline</string>
    <string name="user_info_storage_id">user_info_st</string>>
    <string name="blank"></string>
    <string name="user_avatar_image">avatar</string>
    <string name="user_avatar_image_file_name">avatar.png</string>

</resources>
