<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/profile_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/fragment_profile_button_margin"
        android:layout_marginEnd="@dimen/fragment_profile_button_margin"
        android:layout_marginBottom="@dimen/fragment_profile_button_padding"
        android:minHeight="0dp"
        android:padding="@dimen/fragment_profile_button_padding"
        android:text="@string/profile_button_profile"
        android:textAllCaps="false"
        android:textSize="@dimen/fragment_profile_button_font_size"
        app:layout_constraintBottom_toTopOf="@+id/bar_between_profile_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <Button
        android:id="@+id/friends_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/fragment_profile_button_margin"
        android:layout_marginTop="@dimen/fragment_profile_button_padding"
        android:layout_marginEnd="@dimen/fragment_profile_button_margin"
        android:layout_marginBottom="@dimen/fragment_profile_button_padding"
        android:minHeight="0dp"
        android:padding="@dimen/fragment_profile_button_padding"
        android:text="@string/profile_button_friends"
        android:textAllCaps="false"
        android:textSize="@dimen/fragment_profile_button_font_size"
        app:layout_constraintBottom_toTopOf="@id/bar_between_friends_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar_between_profile_friends" />

    <Button
        android:id="@+id/history_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/fragment_profile_button_margin"
        android:layout_marginTop="@dimen/fragment_profile_button_padding"
        android:layout_marginEnd="@dimen/fragment_profile_button_margin"
        android:layout_marginBottom="@dimen/fragment_profile_button_padding"
        android:minHeight="0dp"
        android:padding="@dimen/fragment_profile_button_padding"
        android:text="@string/profile_button_history"
        android:textAllCaps="false"
        android:textSize="@dimen/fragment_profile_button_font_size"
        app:layout_constraintBottom_toTopOf="@id/bar_between_history_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar_between_friends_history" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/fragment_profile_button_margin"
        android:layout_marginTop="@dimen/fragment_profile_button_padding"
        android:layout_marginEnd="@dimen/fragment_profile_button_margin"
        android:layout_marginBottom="@dimen/fragment_profile_bottom_margin"
        android:minHeight="0dp"
        android:padding="@dimen/fragment_profile_button_padding"
        android:text="@string/profile_button_settings"
        android:textAllCaps="false"
        android:textSize="@dimen/fragment_profile_button_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar_between_history_settings" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/oswald"
        android:text="@string/profile_default_user_name"
        android:textSize="@dimen/fragment_profile_user_name_font_size"
        app:layout_constraintBottom_toTopOf="@id/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <View
        android:id="@+id/bar_between_profile_friends"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/fragment_profile_bar_margin"
        android:layout_marginTop="@dimen/fragment_profile_bar_margin_v"
        android:layout_marginEnd="@dimen/fragment_profile_bar_margin"
        android:layout_marginBottom="@dimen/fragment_profile_bar_margin_v"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@id/friends_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_button" />

    <View
        android:id="@+id/bar_between_history_settings"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/fragment_profile_bar_margin"
        android:layout_marginTop="@dimen/fragment_profile_bar_margin_v"
        android:layout_marginEnd="@dimen/fragment_profile_bar_margin"
        android:layout_marginBottom="@dimen/fragment_profile_bar_margin_v"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@id/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_button" />

    <View
        android:id="@+id/bar_between_friends_history"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/fragment_profile_bar_margin"
        android:layout_marginTop="@dimen/fragment_profile_bar_margin_v"
        android:layout_marginEnd="@dimen/fragment_profile_bar_margin"
        android:layout_marginBottom="@dimen/fragment_profile_bar_margin_v"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@id/history_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friends_button" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:contentDescription="@string/profile_profileImage_description"
        android:focusable="true"
        android:src="@drawable/usericon_24dp"
        app:civ_border_color="#505050"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toTopOf="@id/user_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>